Server/esp_server/build/log/idf_py_stderr_output_55725
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:27:28: error: 'PACKET_BUFFER' undeclared here (not in a function); did you mean 'PACKET_SIZE'?
   27 | static uint8_t read_buffer[PACKET_BUFFER];
      |                            ^~~~~~~~~~~~~
      |                            PACKET_SIZE
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_task':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:151:54: error: 'BUFFER_SIZE' undeclared (first use in this function)
  151 |             int len = recv(client_sock, read_buffer, BUFFER_SIZE, 0);
      |                                                      ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:151:54: note: each undeclared identifier is reported only once for each function it appears in
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:160:21: error: 'write_buffer_index' undeclared (first use in this function); did you mean 'write_buffer'?
  160 |                 if (write_buffer_index + len <= MAX_FILE_SIZE) {
      |                     ^~~~~~~~~~~~~~~~~~
      |                     write_buffer
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:160:49: error: 'MAX_FILE_SIZE' undeclared (first use in this function)
  160 |                 if (write_buffer_index + len <= MAX_FILE_SIZE) {
      |                                                 ^~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:88:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   88 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:29:16: warning: 'write_index' defined but not used [-Wunused-variable]
   29 | static uint8_t write_index = 0;
      |                ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:27:16: warning: 'read_buffer' defined but not used [-Wunused-variable]
   27 | static uint8_t read_buffer[PACKET_BUFFER];
      |                ^~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
